--- a/csscheatsheet/website/index.html
+++ b/csscheatsheet/website/index.html
@@ -4,9 +4,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Test Website</title>
 </head>
+
 <body>
-  
+  <header id="main-header">
+    <div class="container">
+     <h1>My Website</h1>
+    </div>
+  </header>
+
+  <nav id="navbar">
+    <div class="container">
+     <ul>
+       <li><a href="#">Home</a></li>
+       <li><a href="#">About</a></li>
+       <li><a href="#">Services</a></li>
+       <li><a href="#">Contact</a></li>
+       <li><a href="#">Pricing</a></li>
+     </ul>
+    </div>
+  </nav>
+
+  <section id="showcase">
+    <div class="container">
+      <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis hic perspiciatis nisi, explicabo error, ab, excepturi accusamus dolores deserunt a praesentium atque iste reprehenderit et qui eius?</h1>
+    </div>
+  </section>
+
+  <div class="container">
+    <section id="main">
+      <h1>Welcome</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolor corporis et consequatur eaque facilis reprehenderit dolore ratione error repellat distinctio officia, molestias libero! Nam nemo nobis laboriosam tempore itaque, numquam delectus recusandae vitae ratione. Esse atque odit facilis neque? Cupiditate voluptas, enim vitae asperiores vero obcaecati accusamus autem quam.</p>
+    </section>
+
+    <aside id="sidebar">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum natus quis commodi, esse qui libero voluptas, ea ab quasi deleniti nemo voluptate? Similique autem aut a ut blanditiis laborum.</p>
+    </aside>
+  </div>
+
+  <footer id="main-footer">
+    <p>Copyright &copy; 2021 My Website</p>
+  </footer>
 </body>
 </html>
